Add About Us section

--- a/index.html
+++ b/index.html
@@ -5,22 +5,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Delani Studios</title>
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
 	<header class="header">
 		<div class="logo">
 			<img src="assets/logo/logo.png" alt="Logo">
 		</div>
-		<div class="primary-heading">
+		<h1 class="primary-heading">
 			<span class="heading--top">Welcome</span>
 			<span class="heading--bottom">to Delani Studios</span>
-		</div>
-		<div class="secondary-heading">
+		</h1>
+		<h2 class="secondary-heading">
 			Amazing people are making amazing desings in a fun environment
-		</div>
+		</h2>
 		<img src="assets/mouse_click.png" alt="Scroll Down" class="mouse-click-icon">
 	</header>
+
+	<section class="about-us">
+		<h3 class="about-title">About Us</h3>
+		<p>When you work with us, you are a team of committed collaborators. </p>
+		<p>All aspects of our software development process are intergrated, iterative and agile.</p>
+		<br>
+		<div class="about--details">
+			<p>Our approach unifies design, development and project management to create exceptional products.</p>
+			<p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
+			<p> Then we help translate them into effective and elegant solutions.</p>
+		</div>
+	</section>
 </body>
 </html>
