--- a/index.html
+++ b/index.html
@@ -42,5 +42,23 @@
 		<p>The outcome of this scoping session is proposal or high-level statement of work</p>
 		<p>Based on your requirements we can provide a complete offering or just the pieces you need.</p>
 	</section>
+
+	<section class="portfolio">
+		<h3 class="portfolio-title">
+			Portfolio
+		</h3>
+		<div class="portfolio--top">
+			<img src="assets/portfolio/work1.jpg" alt="">
+			<img src="assets/portfolio/work2.jpg" alt="">
+			<img src="assets/portfolio/work3.jpg" alt="">
+			<img src="assets/portfolio/work4.jpg" alt="">
+		</div>
+		<div class="portfolio--bottom">
+			<img src="assets/portfolio/work5.jpg" alt="">
+			<img src="assets/portfolio/work6.jpg" alt="">
+			<img src="assets/portfolio/work7.jpg" alt="">
+			<img src="assets/portfolio/work8.jpg" alt="">
+		</div>
+	</section>
 </body>
 </html>
