--- a/index.html
+++ b/index.html
@@ -60,5 +60,16 @@
 			<img src="assets/portfolio/work8.jpg" alt="">
 		</div>
 	</section>
+
+	<section class="contact">
+		<h3 class="contact-title">Contact Us</h3>
+		<form class="form">
+			<div>
+				<input type="text" name="name" placeholder="Name...">
+				<input type="email" name="email" placeholder="Email...">
+			</div>
+			<textarea name="message" id="message" cols="130" rows="10" placeholder="Your Message Here"></textarea>
+		</form>
+	</section>
 </body>
 </html>
