--- a/index.html
+++ b/index.html
@@ -68,8 +68,27 @@
 				<input type="text" name="name" placeholder="Name...">
 				<input type="email" name="email" placeholder="Email...">
 			</div>
-			<textarea name="message" id="message" cols="130" rows="10" placeholder="Your Message Here"></textarea>
+			<textarea name="message" id="message" cols="131" rows="10" placeholder="Your Message Here"></textarea>
 		</form>
 	</section>
+
+	<footer class="footer">
+		<div class="social--icons">
+			<img src="assets/social_icons/twitter.png" alt="Twitter">
+			<img src="assets/social_icons/dribble.png" alt="Dribble">
+			<img src="assets/social_icons/g_plus.png" alt="Google Plus">
+			<img src="assets/social_icons/facebook.png" alt="Facebook">
+			<img src="assets/social_icons/skype.png" alt="Skype">
+			<img src="assets/social_icons/you_tube.png" alt="Youtube">
+			<img src="assets/social_icons/behance.png" alt="Behance">
+			<img src="assets/social_icons/pinterest.png" alt="Pinterest">
+			<img src="assets/social_icons/stumble_upon.png" alt="Stumble Upon">
+			<img src="assets/social_icons/flickr.png" alt="Flickr">
+		</div>
+		<div class="copyright">
+			<div class="company-name">DELANI STUDIOS.</div>
+			<div class="year">2019</span>
+		</div>
+	</footer>
 </body>
 </html>
