Add what we do section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,29 @@
 		<p>Based on your requirements we can provide a complete offering or just the pieces you need.</p>
 	</section>
 
+	<section class="what-we-do row">
+		<h3 class="what-we-do-title">What we do</h3>
+		<div class="column">
+			<img src="assets/services_icons/design_icon.png" alt="Design Icon">
+			<h4>Design</h4>
+			<p>Our design practice offers a full range of services including branding strategy, interaction and visual design and user experience testing.</p>
+			<p>Throughout your project our designers create and implement visual designs and workflows, solicit user feedback, and work with you to make sure what gets buuilt is what is needed.</p>
+		</div>
+		<div class="column">
+			<img src="assets/services_icons/dev_icon.png" alt="Development Icon">
+			<h4>Development</h4>
+			<p>Our engineers are fluent in the latest enterprise, mobile and web development technologies. </p>
+			<p>They collaborate with your team to write, test and improve code on a daily basis, using proven practices suc as test-driven development and pair programming.</p>
+		</div>
+		<div class="column">
+			<img src="assets/services_icons/product_icon.png" alt="Product Icon">
+			<h4>Product Management</h4>
+			<p>
+				Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This  iterative process allows for changes as business requirements evolve.
+			</p>
+		</div>
+	</section>
+
 	<section class="portfolio">
 		<h3 class="portfolio-title">
 			Portfolio
