--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 	</section>
 
 	<section class="services">
-		<h3 class="services--title">
-			Services
-		</h3>
+		<h3 class="services--title">Services</h3>
 		<p>Before we sign a contract or write a line of code, our team will spend the necessary time needed to understand your product vision.</p>
 		<p>The outcome of this scoping session is proposal or high-level statement of work</p>
 		<p>Based on your requirements we can provide a complete offering or just the pieces you need.</p>
@@ -49,13 +47,13 @@
 			<img src="assets/services_icons/design_icon.png" alt="Design Icon">
 			<h4>Design</h4>
 			<p>Our design practice offers a full range of services including branding strategy, interaction and visual design and user experience testing.</p>
-			<p>Throughout your project our designers create and implement visual designs and workflows, solicit user feedback, and work with you to make sure what gets buuilt is what is needed.</p>
+			<p>Throughout your project our designers create and implement visual designs and workflows, solicit user feedback, and work with you to make sure what gets built is what is needed.</p>
 		</div>
 		<div class="column">
 			<img src="assets/services_icons/dev_icon.png" alt="Development Icon">
 			<h4>Development</h4>
 			<p>Our engineers are fluent in the latest enterprise, mobile and web development technologies. </p>
-			<p>They collaborate with your team to write, test and improve code on a daily basis, using proven practices suc as test-driven development and pair programming.</p>
+			<p>They collaborate with your team to write, test and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
 		</div>
 		<div class="column">
 			<img src="assets/services_icons/product_icon.png" alt="Product Icon">
