--- a/index.html
+++ b/index.html
@@ -5,111 +5,136 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Delani Studios</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-	<header class="header">
-		<div class="logo">
-			<img src="assets/logo/logo.png" alt="Logo">
-		</div>
-		<h1 class="primary-heading">
-			<span class="heading--top">Welcome</span>
-			<span class="heading--bottom">to Delani Studios</span>
-		</h1>
-		<h2 class="secondary-heading">
-			Amazing people are making amazing desings in a fun environment
-		</h2>
-		<img src="assets/mouse_click.png" alt="Scroll Down" class="mouse-click-icon">
-	</header>
-
-	<section class="about-us">
-		<h3 class="about-title">About Us</h3>
-		<p>When you work with us, you are a team of committed collaborators. </p>
-		<p>All aspects of our software development process are intergrated, iterative and agile.</p>
-		<br>
-		<div class="about--details">
-			<p>Our approach unifies design, development and project management to create exceptional products.</p>
-			<p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
-			<p> Then we help translate them into effective and elegant solutions.</p>
-		</div>
-	</section>
-
-	<section class="services">
-		<h3 class="services--title">Services</h3>
-		<p>Before we sign a contract or write a line of code, our team will spend the necessary time needed to understand your product vision.</p>
-		<p>The outcome of this scoping session is proposal or high-level statement of work</p>
-		<p>Based on your requirements we can provide a complete offering or just the pieces you need.</p>
-	</section>
-
-	<section class="what-we-do row">
-		<h3 class="what-we-do-title">What we do</h3>
-		<div class="column">
-			<img src="assets/services_icons/design_icon.png" alt="Design Icon">
-			<h4>Design</h4>
-			<p>Our design practice offers a full range of services including branding strategy, interaction and visual design and user experience testing.</p>
-			<p>Throughout your project our designers create and implement visual designs and workflows, solicit user feedback, and work with you to make sure what gets built is what is needed.</p>
-		</div>
-		<div class="column">
-			<img src="assets/services_icons/dev_icon.png" alt="Development Icon">
-			<h4>Development</h4>
-			<p>Our engineers are fluent in the latest enterprise, mobile and web development technologies. </p>
-			<p>They collaborate with your team to write, test and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
-		</div>
-		<div class="column">
-			<img src="assets/services_icons/product_icon.png" alt="Product Icon">
-			<h4>Product Management</h4>
-			<p>
-				Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This  iterative process allows for changes as business requirements evolve.
-			</p>
-		</div>
-	</section>
-
-	<section class="portfolio">
-		<h3 class="portfolio-title">
-			Portfolio
-		</h3>
-		<div class="portfolio--top">
-			<img src="assets/portfolio/work4.jpg" alt="">
-			<img src="assets/portfolio/work3.jpg" alt="">
-			<img src="assets/portfolio/work2.jpg" alt="">
-			<img src="assets/portfolio/work1.jpg" alt="">
-		</div>
-		<div class="portfolio--bottom">
-			<img src="assets/portfolio/work5.jpg" alt="">
-			<img src="assets/portfolio/work6.jpg" alt="">
-			<img src="assets/portfolio/work7.jpg" alt="">
-			<img src="assets/portfolio/work8.jpg" alt="">
-		</div>
-	</section>
-
-	<section class="contact">
-		<h3 class="contact-title">Contact Us</h3>
-		<form class="form">
-			<div>
-				<input type="text" name="name" placeholder="Name...">
-				<input type="email" name="email" placeholder="Email...">
+	<div class="container">
+		<header class="header">
+			<div class="logo">
+				<img src="assets/logo/logo.png" alt="Logo">
 			</div>
-			<textarea name="message" id="message" cols="131" rows="10" placeholder="Your Message Here"></textarea>
-		</form>
-	</section>
+			<h1 class="primary-heading">
+				<span class="heading--top">Welcome</span>
+				<span class="heading--bottom">to Delani Studios</span>
+			</h1>
+			<h2 class="secondary-heading">
+				Amazing people are making amazing desings in a fun environment
+			</h2>
+			<img src="assets/mouse_click.png" alt="Scroll Down" class="mouse-click-icon">
+		</header>
 
-	<footer class="footer">
-		<div class="social--icons">
-			<img src="assets/social_icons/twitter.png" alt="Twitter">
-			<img src="assets/social_icons/dribble.png" alt="Dribble">
-			<img src="assets/social_icons/g_plus.png" alt="Google Plus">
-			<img src="assets/social_icons/facebook.png" alt="Facebook">
-			<img src="assets/social_icons/skype.png" alt="Skype">
-			<img src="assets/social_icons/you_tube.png" alt="Youtube">
-			<img src="assets/social_icons/behance.png" alt="Behance">
-			<img src="assets/social_icons/pinterest.png" alt="Pinterest">
-			<img src="assets/social_icons/stumble_upon.png" alt="Stumble Upon">
-			<img src="assets/social_icons/flickr.png" alt="Flickr">
-		</div>
-		<div class="copyright">
-			<div class="company-name">DELANI STUDIOS.</div>
-			<div class="year">2019</span>
-		</div>
-	</footer>
+		<section class="about-us">
+			<h3 class="about-title">About Us</h3>
+			<p>When you work with us, you are a team of committed collaborators. </p>
+			<p>All aspects of our software development process are intergrated, iterative and agile.</p>
+			<br>
+			<div class="about--details">
+				<p>Our approach unifies design, development and project management to create exceptional products.</p>
+				<p>We start each project by understanding your business goals, the users needs and the product requirements.</p>
+				<p> Then we help translate them into effective and elegant solutions.</p>
+			</div>
+		</section>
+
+		<section class="services">
+			<h3 class="services--title">Services</h3>
+			<p>Before we sign a contract or write a line of code, our team will spend the necessary time needed to understand your product vision.</p>
+			<p>The outcome of this scoping session is proposal or high-level statement of work</p>
+			<p>Based on your requirements we can provide a complete offering or just the pieces you need.</p>
+		</section>
+
+		<section class="what-we-do row">
+			<h3 class="what-we-do-title">What we do</h3>
+			<div class="row">
+				<div class="col-sm">
+					<img src="assets/services_icons/design_icon.png" alt="Design Icon">
+					<h4>Design</h4>
+					<p>Our design practice offers a full range of services including branding strategy, interaction and visual design and user experience testing.</p>
+					<p>Throughout your project our designers create and implement visual designs and workflows, solicit user feedback, and work with you to make sure what gets built is what is needed.</p>
+				</div>
+				<div class="col-sm">
+					<img src="assets/services_icons/dev_icon.png" alt="Development Icon">
+					<h4>Development</h4>
+					<p>Our engineers are fluent in the latest enterprise, mobile and web development technologies. </p>
+					<p>They collaborate with your team to write, test and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+				</div>
+				<div class="col-sm">
+					<img src="assets/services_icons/product_icon.png" alt="Product Icon">
+					<h4>Product Management</h4>
+					<p>
+						Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This  iterative process allows for changes as business requirements evolve.
+					</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="portfolio">
+			<h3 class="portfolio-title">
+				Portfolio
+			</h3>
+			<div class="portfolio--top">
+				<div class="row">
+					<div class="col-sm">
+						<img src="assets/portfolio/work1.jpg" alt="">
+					</div>
+					<div class="col-sm">
+						<img src="assets/portfolio/work2.jpg" alt="">
+					</div>
+					<div class="col-sm">
+						<img src="assets/portfolio/work3.jpg" alt="">
+					</div>
+					<div class="col-sm">
+						<img src="assets/portfolio/work4.jpg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="portfolio--bottom">
+				<div class="row">
+					<div class="col-sm">
+						<img src="assets/portfolio/work5.jpg" alt="">
+					</div>
+					<div class="col-sm">
+						<img src="assets/portfolio/work6.jpg" alt="">
+					</div>
+					<div class="col-sm">
+						<img src="assets/portfolio/work7.jpg" alt="">
+					</div>
+					<div class="col-sm">
+						<img src="assets/portfolio/work8.jpg" alt="">
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="contact">
+			<h3 class="contact-title">Contact Us</h3>
+			<form class="form">
+				<div>
+					<input type="text" name="name" placeholder="Name...">
+					<input type="email" name="email" placeholder="Email...">
+				</div>
+				<textarea name="message" id="message" cols="131" rows="10" placeholder="Your Message Here"></textarea>
+			</form>
+		</section>
+
+		<footer class="footer">
+			<div class="social--icons">
+				<img src="assets/social_icons/twitter.png" alt="Twitter">
+				<img src="assets/social_icons/dribble.png" alt="Dribble">
+				<img src="assets/social_icons/g_plus.png" alt="Google Plus">
+				<img src="assets/social_icons/facebook.png" alt="Facebook">
+				<img src="assets/social_icons/skype.png" alt="Skype">
+				<img src="assets/social_icons/you_tube.png" alt="Youtube">
+				<img src="assets/social_icons/behance.png" alt="Behance">
+				<img src="assets/social_icons/pinterest.png" alt="Pinterest">
+				<img src="assets/social_icons/stumble_upon.png" alt="Stumble Upon">
+				<img src="assets/social_icons/flickr.png" alt="Flickr">
+			</div>
+			<div class="copyright">
+				<div class="company-name">DELANI STUDIOS.</div>
+				<div class="year">2019</span>
+			</div>
+		</footer>
+	</div>
 </body>
 </html>
