--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-	<div class="container">
+	<div class="">
 		<header class="header">
 			<div class="logo">
 				<img src="assets/logo/logo.png" alt="Logo">
