--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 			<h3 class="what-we-do-title">What we do</h3>
 			<div class="row">
 				<div class="col-sm">
-					<img src="assets/services_icons/design_icon.png" alt="Design Icon">
+					<img src="assets/services_icons/design_icon.png" alt="Design Icon" class="icon">
 					<h4>Design</h4>
 					<p>Our design practice offers a full range of services including branding strategy, interaction and visual design and user experience testing.</p>
 					<p>Throughout your project our designers create and implement visual designs and workflows, solicit user feedback, and work with you to make sure what gets built is what is needed.</p>
 				</div>
 				<div class="col-sm">
-					<img src="assets/services_icons/dev_icon.png" alt="Development Icon">
+					<img src="assets/services_icons/dev_icon.png" alt="Development Icon" class="icon">
 					<h4>Development</h4>
 					<p>Our engineers are fluent in the latest enterprise, mobile and web development technologies. </p>
 					<p>They collaborate with your team to write, test and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
 				</div>
 				<div class="col-sm">
-					<img src="assets/services_icons/product_icon.png" alt="Product Icon">
+					<img src="assets/services_icons/product_icon.png" alt="Product Icon" class="icon">
 					<h4>Product Management</h4>
 					<p>
 						Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This  iterative process allows for changes as business requirements evolve.
